k8s/user-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-frontend
  template:
    metadata:
      labels:
        app: user-frontend
    spec:
      containers:
        - name: user-frontend
          image: asia-docker.pkg.dev/architect-certification-289902/user-frontend/user-frontend:latest
          command: ["streamlit", "run", "user-frontend/main.py", "--server.port=8502", "--server.address=0.0.0.0"]
          ports:
            - containerPort: 8502
---
apiVersion: v1
kind: Service
metadata:
  name: user-frontend
spec:
  selector:
    app: user-frontend
  ports:
    - port: 8502
      targetPort: 8502
  type: ClusterIP
