k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
spec:
  rules:
  - http:
      paths:
      - path: /admin/
        pathType: Prefix
        backend:
          service:
            name: admin-frontend
            port:
              number: 8501
      - path: /admin
        pathType: Prefix
        backend:
          service:
            name: admin-frontend
            port:
              number: 8501
      - path: /
        pathType: Prefix
        backend:
          service:
            name: user-frontend
            port:
              number: 8502
